--- a/index.html
+++ b/index.html
@@ -23,53 +23,50 @@ Tooplate 2115 Marvel
 https://www.tooplate.com/view/2115-marvel
 
 -->
-  </head>
-  <body style="background-color:rgb(245, 255, 251);">
-  
+</head>
+<body>
 
-    <!-- MENU -->
-    <nav class="navbar navbar-expand-sm navbar-light">
-        <div class="container">
-            <a class="navbar-brand" href="index.html"><i class='uil uil-user'></i>Adlena Eliya Portfolio</a>
+  <!-- MENU -->
+  <nav class="navbar navbar-expand-sm navbar-light">
+      <div class="container">
+          <a class="navbar-brand" href="index.html"><i class='uil uil-user'></i> Adlena Eliya Portfolio</a>
 
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-                aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-                <span class="navbar-toggler-icon"></span>
-                <span class="navbar-toggler-icon"></span>
-            </button>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+              aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+              <span class="navbar-toggler-icon"></span>
+              <span class="navbar-toggler-icon"></span>
+          </button>
 
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav mx-auto">
-                    <li class="nav-item">
-                        <a href="#about" class="nav-link"><span data-hover="ABOUT">About</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#project" class="nav-link"><span data-hover="INVOLVEMENT">Involvement</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#resume" class="nav-link"><span data-hover="RESUME">Resume</span></a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#contact" class="nav-link"><span data-hover="CONTACT">Contact</span></a>
-                    </li>
-                </ul>
+          <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav mx-auto">
+                  <li class="nav-item">
+                      <a href="#about" class="nav-link"><span data-hover="About">About</span></a>
+                  </li>
+                  <li class="nav-item">
+                      <a href="#project" class="nav-link"><span data-hover="Projects">Involvement</span></a>
+                  </li>
+                  <li class="nav-item">
+                      <a href="#resume" class="nav-link"><span data-hover="Resume">Resume</span></a>
+                  </li>
+                  <li class="nav-item">
+                      <a href="#contact" class="nav-link"><span data-hover="Contact">Contact</span></a>
+                  </li>
+              </ul>
 
-                <ul class="navbar-nav ml-lg-auto">
-                    <div class="ml-lg-4">
-                      <div class="color-mode d-lg-flex justify-content-center align-items-center">
-                        <i class="color-mode-icon"></i>
-                        Color mode
-                      </div>
+              <ul class="navbar-nav ml-lg-auto">
+                  <div class="ml-lg-4">
+                    <div class="color-mode d-lg-flex justify-content-center align-items-center">
+                      <i class="color-mode-icon"></i>
+                      Color mode
                     </div>
-                </ul>
-            </div>
-        </div>
-    </nav>
+                  </div>
+              </ul>
+          </div>
+      </div>
+  </nav>
 
 
-
-    
     <!-- ABOUT -->
     <section class="about full-screen d-lg-flex justify-content-center align-items-center" id="about">
         <div class="container">
@@ -87,7 +84,7 @@ https://www.tooplate.com/view/2115-marvel
                                 </div>
                         </h1>
 
-                        <p style="color:rgb(0, 0, 0);"> Get to know me more on this website and do contact me on anything!</p>
+                        <p style="color:rgb(126, 126, 126);"> Get to know me more on this website and do contact me on anything!</p>
                         
                         <div class="custom-btn-group mt-4">
                           <a href="#" class="btn mr-lg-2 custom-btn"><i class='uil uil-file-alt'></i> Download Resume</a>
