--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ https://www.tooplate.com/view/2115-marvel
                       <a href="#about" class="nav-link"><span data-hover="About">About</span></a>
                   </li>
                   <li class="nav-item">
-                      <a href="#project" class="nav-link"><span data-hover="Projects">Involvement</span></a>
+                      <a href="#project" class="nav-link"><span data-hover="Involvement">Involvement</span></a>
                   </li>
                   <li class="nav-item">
                       <a href="#resume" class="nav-link"><span data-hover="Resume">Resume</span></a>
