--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@ https://www.tooplate.com/view/2115-marvel
                         </div>
                         <div class="timeline-info">
                             <h3><span>Jurutera Masuk Desa 6.0</span><small>Vice Secretary</small></h3>
-                            <p>Social sevice programme, engaged with village community.</p>
+                            <p>Social service programme, engaged with village community.</p>
                         </div>
                     </div>
 
