--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Portfolio Website</title>
+    <title>Adlena's Portfolio</title>
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/unicons.css">
@@ -66,9 +66,6 @@ https://www.tooplate.com/view/2115-marvel
       </div>
   </nav>
 
-
-
-  
 
 
     <!-- ABOUT -->
