--- a/hipa/index.html
+++ b/hipa/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>FULL ASSESSMENT</title>
+        <title>HIPA ASSESSMENT</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
@@ -62,7 +62,7 @@
                         <div class="timeline-heading">
                             <h4 class="subheading">Search user</h4>
                         </div>
-                        <div class="timeline-body"><p class="text-muted">You can search you first or last name to display specific user name.</p></div>
+                        <div class="timeline-body"><p class="text-muted">Search your first or last name to display specific user name.</p></div>
                     </div>
                 </li>
                 <li class="timeline-inverted">
@@ -71,7 +71,7 @@
                         <div class="timeline-heading">
                             <h4 class="subheading">Add User</h4>
                         </div>
-                        <div class="timeline-body"><p class="text-muted">You can add new user by fill in the details.</p></div>
+                        <div class="timeline-body"><p class="text-muted">Add new user by fill in the details.</p></div>
                     </div>
                 </li>
                 <li class="timeline-inverted">
